Updated dahsboard with up to date history
